# -*- coding: utf-8 -*-
"""
/***************************************************************************
 Clearly.Hub
                                 A QGIS plugin
 Clearly.Hub plugin for QGIS
 Generated by Plugin Builder: http://g-sherman.github.io/Qgis-Plugin-Builder/
                              -------------------
        begin                : 2026-02-19
        git sha              : $Format:%H$
        copyright            : (C) 2026 by Future Insight
        email                : support@futureinsight.nl
 ***************************************************************************/

/***************************************************************************
 *                                                                         *
 *   This program is free software; you can redistribute it and/or modify  *
 *   it under the terms of the GNU General Public License as published by  *
 *   the Free Software Foundation; either version 2 of the License, or     *
 *   (at your option) any later version.                                   *
 *                                                                         *
 ***************************************************************************/
"""

from qgis.core import QgsApplication, QgsProject, QgsTask
from qgis.PyQt.QtCore import QSettings, QTranslator, QCoreApplication, pyqtSignal
from qgis.PyQt.QtGui import QIcon
from qgis.PyQt.QtWidgets import QAction

from .clearly_hub_dialog import ClearlyHubDialog
from .backend.service import Service
import os.path


class DataFetchTask(QgsTask):
    """Background task that fetches datasets and digital twins off the main thread."""

    data_ready = pyqtSignal(object, list, list)  # user, datasets, digital_twins

    def __init__(self, service, refresh_user=False):
        super().__init__("ClearlyHub: Loading data")
        self.service = service
        self.refresh_user = refresh_user
        self._user = None
        self._datasets = []
        self._digital_twins = []

    def run(self):
        try:
            if self.refresh_user and self.service.is_authenticated():
                self._user = self.service.update_user_info()
            self._datasets = self.service.get_all_datasets()
            self._digital_twins = self.service.get_public_digital_twins(datasets=self._datasets)
            return True
        except Exception as e:
            print(f"[ClearlyHub] Data fetch error: {e}")
            return False

    def finished(self, result):
        if result:
            self.data_ready.emit(self._user, self._datasets, self._digital_twins)


class DigitalTwinLoadTask(QgsTask):
    """Background task that prepares digital twin layers, then adds them on the main thread."""

    load_complete = pyqtSignal(int, int, int)  # total, loaded, failed

    def __init__(self, service, digital_twin_id):
        super().__init__("ClearlyHub: Loading digital twin")
        self.service = service
        self.digital_twin_id = digital_twin_id
        self._prepared_layers = []
        self._total = 0
        self._failed = 0

    def _collect_layer(self, dataset_id):
        """Build the layer without adding it to the project (background-thread safe)."""
        layer = self.service.load_data(dataset_id, add_to_project=False)
        if layer is not None:
            self._prepared_layers.append(layer)
        return layer

    def run(self):
        try:
            result = self.service.digital_twin_manager.load_digital_twin(
                self.digital_twin_id,
                load_layer_func=self._collect_layer,
            )
            self._total = result.get("total", 0)
            self._failed = result.get("failed", 0)
            return True
        except Exception as e:
            print(f"[ClearlyHub] Digital twin load error: {e}")
            return False

    def finished(self, result):
        if not result:
            self.load_complete.emit(0, 0, 0)
            return

        loaded = 0
        for layer in self._prepared_layers:
            try:
                QgsProject.instance().addMapLayer(layer)
                loaded += 1
            except Exception as e:
                print(f"[ClearlyHub] Failed to add layer to project: {e}")
                self._failed += 1

        self.load_complete.emit(self._total, loaded, self._failed)


class ClearlyHubController:
    def __init__(self, dialog):
        self.dialog = dialog
        self.service = Service()
        self._fetch_task = None

        self.dialog.login_requested.connect(self.handle_login_requested)
        self.dialog.logout_requested.connect(self.handle_logout_requested)

        # Connect dataset signals
        self.dialog.datasets_widget.dataset_load_requested.connect(self.handle_dataset_load_requested)
        self.dialog.datasets_widget.page_changed.connect(self.handle_datasets_page_changed)
        self.dialog.digital_twin_widget.digital_twin_load_requested.connect(self.handle_digital_twin_load_requested)
        self._fetch_task = None
        self._twin_load_task = None

    def _reload_dataset_page(self, page: int = 0, page_size: int = None):
        """Reload datasets for a specific page."""
        widget = self.dialog.datasets_widget
        if page_size is None:
            page_size = widget.page_size

        page = max(0, int(page))
        page_size = max(1, int(page_size))
        widget.set_page(page)

        payload = self.service.get_datasets_page(limit=page_size, offset=page * page_size)
        datasets = payload.get("results", [])
        total_count = payload.get("count", len(datasets))
        self.dialog.render_datasets(datasets, total_count=total_count)

    def _start_data_fetch(self, refresh_user=False):
        """Start a background task to fetch datasets and digital twins."""
        if self._fetch_task is not None:
            self._fetch_task.cancel()
            self._fetch_task = None

        self.dialog.set_loading(True)
        task = DataFetchTask(self.service, refresh_user=refresh_user)
        task.data_ready.connect(self._on_data_ready)
        task.taskTerminated.connect(lambda: self.dialog.set_loading(False))
        self._fetch_task = task
        QgsApplication.taskManager().addTask(task)

    def _on_data_ready(self, user, datasets, digital_twins):
        """Update the UI with data fetched in the background (runs on main thread)."""
        self.dialog.set_loading(False)
        if user is not None:
            self.dialog.set_authenticated_user(user)
        self.dialog.render_datasets(datasets, total_count=len(datasets))
        self.dialog.render_digital_twins(digital_twins)

    def _reload_all_data(self):
        """Reload all GET-based views to reflect current authentication state."""
        self._start_data_fetch(refresh_user=False)

    def show(self):
        """Show the dialog and kick off background data loading."""
        if self.service.current_user is not None:
            self.dialog.set_authenticated_user(self.service.current_user)
        self.dialog.show()
        self._start_data_fetch(refresh_user=True)
        return self.dialog.exec()

    def handle_login_requested(self):
        """Handles the user login process."""
        user = self.service.login()
        if user is None:
            self.dialog.show_login_failed()
            return

        self.dialog.set_authenticated_user(user)
        self.dialog.show_login_success(user)
        self._reload_all_data()

    def handle_logout_requested(self):
        """Handles the user logout process."""
        self.service.logout()
        self.dialog.set_authenticated_user(None)
        self._reload_all_data()
        self.dialog.show_logged_out()
    
    def handle_dataset_load_requested(self, dataset_id, resource_url, resource_format, resource_name):
        """Handle dataset loading when a resource is selected from the dropdown."""
        try:
            result = self.service.load_data(dataset_id, resource_url, resource_format, resource_name)
            if result is None:
                self.dialog.show_dataset_load_failed(
                    f"Failed to load dataset with ID: {dataset_id}. "
                    "Unsupported format, invalid URL, or remote service unavailable."
                )
                return

            # QgsProject.instance().addMapLayer(result)
            self.dialog.show_dataset_load_success()
        except Exception as e:
            self.dialog.show_dataset_load_failed(f"Failed to load dataset: {str(e)}")

    def handle_digital_twin_load_requested(self, digital_twin_id):
        """Start a background task to load all datasets in a digital twin."""
        if self._twin_load_task is not None:
            self._twin_load_task.cancel()

        self.dialog.set_loading(True)
        task = DigitalTwinLoadTask(self.service, digital_twin_id)
        task.load_complete.connect(self._on_digital_twin_load_complete)
        task.taskTerminated.connect(lambda: self.dialog.set_loading(False))
        self._twin_load_task = task
        QgsApplication.taskManager().addTask(task)

    def _on_digital_twin_load_complete(self, total, loaded, failed):
        """Handle digital twin load result on the main thread."""
        self.dialog.set_loading(False)
        self._twin_load_task = None

        if total == 0:
            self.dialog.show_digital_twin_load_failed(
                "No datasets were found for this digital twin package."
            )
        elif loaded == 0:
            self.dialog.show_digital_twin_load_failed(
                "Failed to load all datasets from this digital twin package."
            )
        elif failed > 0:
            self.dialog.show_digital_twin_load_failed(
                f"Digital twin partially loaded: {loaded}/{total} datasets loaded."
            )
        else:
            self.dialog.show_digital_twin_load_success(loaded)

    def handle_datasets_page_changed(self, page, page_size):
        """Pagination is handled in the datasets tab after full-data load."""
        _ = (page, page_size)

class ClearlyHub:
    """QGIS Plugin Implementation."""

    def __init__(self, iface):
        """Constructor.

        :param iface: An interface instance that will be passed to this class
            which provides the hook by which you can manipulate the QGIS
            application at run time.
        :type iface: QgsInterface
        """
        # Save reference to the QGIS interface
        self.iface = iface
        # initialize plugin directory
        self.plugin_dir = os.path.dirname(__file__)
        # initialize locale
        locale = QSettings().value('locale/userLocale')[0:2]
        locale_path = os.path.join(
            self.plugin_dir,
            'i18n',
            'Clearly.Hub_{}.qm'.format(locale))

        if os.path.exists(locale_path):
            self.translator = QTranslator()
            self.translator.load(locale_path)
            QCoreApplication.installTranslator(self.translator)

        # Declare instance attributes
        self.actions = []
        self.menu = self.tr('&Clearly.Hub')

        # Check if plugin was started the first time in current QGIS session
        # Must be set in initGui() to survive plugin reloads
        self.first_start = None

    # noinspection PyMethodMayBeStatic
    def tr(self, message):
        """Get the translation for a string using Qt translation API.

        We implement this ourselves since we do not inherit QObject.

        :param message: String for translation.
        :type message: str, QString

        :returns: Translated version of message.
        :rtype: QString
        """
        # noinspection PyTypeChecker,PyArgumentList,PyCallByClass
        return QCoreApplication.translate('Clearly.Hub', message)

    def add_action(
        self,
        icon_path,
        text,
        callback,
        enabled_flag=True,
        add_to_menu=True,
        add_to_toolbar=True,
        status_tip=None,
        whats_this=None,
        parent=None):
        """Add a toolbar icon to the toolbar.

        :param icon_path: Path to the icon for this action. Can be a resource
            path (e.g. ':/plugins/foo/bar.png') or a normal file system path.
        :type icon_path: str

        :param text: Text that should be shown in menu items for this action.
        :type text: str

        :param callback: Function to be called when the action is triggered.
        :type callback: function

        :param enabled_flag: A flag indicating if the action should be enabled
            by default. Defaults to True.
        :type enabled_flag: bool

        :param add_to_menu: Flag indicating whether the action should also
            be added to the menu. Defaults to True.
        :type add_to_menu: bool

        :param add_to_toolbar: Flag indicating whether the action should also
            be added to the toolbar. Defaults to True.
        :type add_to_toolbar: bool

        :param status_tip: Optional text to show in a popup when mouse pointer
            hovers over the action.
        :type status_tip: str

        :param parent: Parent widget for the new action. Defaults None.
        :type parent: QWidget

        :param whats_this: Optional text to show in the status bar when the
            mouse pointer hovers over the action.

        :returns: The action that was created. Note that the action is also
            added to self.actions list.
        :rtype: QAction
        """

        icon = QIcon(icon_path)
        action = QAction(icon, text, parent)
        action.triggered.connect(callback)
        action.setEnabled(enabled_flag)

        if status_tip is not None:
            action.setStatusTip(status_tip)

        if whats_this is not None:
            action.setWhatsThis(whats_this)

        if add_to_toolbar:
            # Adds plugin icon to Plugins toolbar
            self.iface.addToolBarIcon(action)

        if add_to_menu:
            self.iface.addPluginToMenu(
                self.menu,
                action)

        self.actions.append(action)

        return action

    def initGui(self):
        """Create the menu entries and toolbar icons inside the QGIS GUI."""

        # Use the packaged icon file directly so the plugin does not depend on
        # Qt5-generated resource modules at runtime.
        icon_path = os.path.join(self.plugin_dir, 'icon.png')
        self.add_action(
            icon_path,
            text=self.tr('ClearlyHub'),
            callback=self.run,
            parent=self.iface.mainWindow())

        # will be set False in run()
        self.first_start = True

    def unload(self):
        """Removes the plugin menu item and icon from QGIS GUI."""
        for action in self.actions:
            self.iface.removePluginMenu(
                self.menu,
                action)
            self.iface.removeToolBarIcon(action)

    def run(self):
        """Run method that performs all the real work"""

        # Create the dialog with elements (after translation) and keep reference
        # Only create GUI ONCE in callback, so that it will only load when the plugin is started
        if self.first_start == True:
            self.first_start = False
            self.dlg = ClearlyHubDialog()
            self.controller = ClearlyHubController(self.dlg)
        # show the dialog
        result = self.controller.show()
        # See if OK was pressed
        if result:
            # Do something useful here - delete the line containing pass and
            # substitute with your code.
            pass